add first route, model bustle, component bustle-article

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,8 @@
-{{outlet}}
+<h1>Bustle</h1>
+
+<h5>This is some articles</h5>
+<ul>
+  {{#each model as |bustle|}}
+     {{bustle-article bustle = bustle}}
+  {{/each}}
+</ul>
