--- a/app/templates/components/bustle-article.hbs
+++ b/app/templates/components/bustle-article.hbs
@@ -1,5 +1,6 @@
 <li>
+  {{#link-to 'bustle' bustle.id}}
   <h2>{{bustle.title}}</h2>
+  {{/link-to}}
   <h4>{{bustle.author}}</h4>
-  <p>{{bustle.caption}}</p>
 </li>
