add update and delete

--- a/app/templates/bustle.hbs
+++ b/app/templates/bustle.hbs
@@ -3,3 +3,4 @@
   <h4>{{model.author}}</h4>
   <p>{{model.caption}}</p>
   <img src="{{model.image}}">
+{{modify-bustle bustle=model update="update" delete="delete"}}
