add form to make new article

--- a/app/templates/bustle.hbs
+++ b/app/templates/bustle.hbs
@@ -1,6 +1,6 @@
 
   <h2>{{model.title}}</h2>
   <h4>{{model.author}}</h4>
-  <p>{{model.caption}}</p>
+  {{{model.content}}}
   <img src="{{model.image}}">
 {{modify-bustle bustle=model update="update" delete="delete"}}
