--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,10 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-
-{{!-- Feel free to remove this! --}}
-
+<div class="nav-container">
+  <div class="logo-center">
+<i class="icon-bustle__gray" id="logo"></i>
+  </div>
+  <div class="nav-features">
+    <a class="nav-features__social" href="https://www.facebook.com/bustledotcom/" target="_blank"><i class="icon-facebook__gray"></i></a><a class="nav-features__social" href="https://twitter.com/bustle" target="_blank"><i class="icon-twitter__gray"></i></a><a class="nav-features__social" href="https://www.pinterest.com/bustledotcom/" target="_blank"><i class="icon-pinterest__gray"></i></a><a class="nav-features__social" href="https://www.instagram.com/bustle/" target="_blank"><i class="icon-instagram__gray"></i></a>
+    <a id="ember404" href="/search" class="nav-features__search ember-view"><i class="icon-search__gray"></i></a>
+  </div>
+</div>
 {{outlet}}
